<resources>
    <string name="app_name">Chirp</string>
    <string name="edittext_email_hint">Email</string>
    <string name="edittext_password_hint">Password</string>
    <string name="login">Login</string>
    <string name="reset_password">Reset Password</string>
    <string name="signup">Sign Up</string>
    <string name="no_account">No Account?</string>
    <string name="enter_email">Email</string>
    <string name="enter_password">Password</string>
    <string name="loading">Loading...</string>
    <string name="enter_name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="permission_required">Permission Is Required</string>
    <string name="failed_to_update_profile">Failed to update profile : %1$s</string>
    <string name="user_created_successfully">User created successfully</string>
    <string name="enter_correct_email">Enter Correct Email</string>
    <string name="password_mismatch">Passwords do not match</string>
    <string name="password_length_error">Password must be at least 8 characters</string>
    <string name="signup_failed">Signup Failed : %1$s</string>
    <string name="reset_password_instructions">Reset Password instructions has been sent on email : %1$s</string>
    <string name="close">Close</string>
    <string name="retry">Retry</string>
    <string name="resend_timer">Resend in : %1$s</string>
    <string name="email_sent_failed">Failed to send email : %1$s</string>
    <string name="missing_email">Email field empty</string>
    <string name="missing_password">Password field empty</string>
    <string name="missing_name">Name field empty</string>
    <string name="missing_confirm_password">Confirm password field empty</string>
    <string name="email_mismatch">Emails don\'t match</string>
    <string name="invalid_email">Email is invalid</string>
    <string name="save">Save</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Log Out</string>
    <string name="something_went_wrong">Something went wrong : %1$s</string>
    <string name="change_picture">Change Picture</string>
    <string name="remove_picture">Remove Picture</string>
    <string name="photo_removed_successfully">Photo Removed Successfully</string>
    <string name="password_changed_successfully">Password Changed Successfully</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="press_back_to_exit">Press back again to exit</string>
    <string name="trending">Trending</string>
    <string name="friend_feed">Friend Feed</string>
    <string name="messages">Messages</string>
    <string name="empty_email_field">Email field empty</string>
    <string name="successful_update">User updated successfully</string>
    <string name="empty_name_field">Empty name field</string>
    <string name="post">Add Post</string>
    <string name="friend">Add Friend</string>
    <string name="post_title">Post Title</string>
    <string name="post_content">Post Content</string>
    <string name="postText">Post</string>
    <string name="search_for_friend">Search for a friend</string>
    <string name="empty_friends_list">Users will appear here...</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="cancel_request">Cancel Friend Request</string>
    <string name="request_sent_successfully">Request Sent Successfully</string>
    <string name="failed_to_send_request">Failed To Send Request : %1$s</string>
    <string name="request_cancelled_successfully">Request Cancelled Successfully</string>
    <string name="failed_to_cancel_request">Failed to cancel request : %1$s</string>
    <string name="failed_to_send_notification">Failed To Send Notification : %1$s</string>
    <string name="failed_to_fetch_friends">Failed to fetch users : %1$s</string>
    <string name="games">Games</string>
    <string name="request_sent">Request Sent Successfully</string>

    <string name="empty_requests_list">You have no requests</string>
    <string name="failed_to_fetch_friend_requests">Failed to fetch friend requests : %1$s</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="request_denied_successfully">Request Denied Successfully</string>
    <string name="failed_to_deny_request">Failed To Deny Request : %1$s</string>
    <string name="failed_to_accept_request">Failed To Accept Request : %1$s</string>
    <string name="send_request">Send Friend Request</string>
    <string name="received_requests">Received Friend Requests</string>
    <string name="empty_chat_list">Chat list will appear here</string>
    <string name="failed_to_fetch_chat_list">Failed to fetch chat list : %1$s</string>
    <string name="enter_Message">Enter Message</string>
    <string name="failed_to_send_message">Failed to send Message : %1$s</string>
    <string name="message_sent_successfully">Message sent successfully</string>
    <string name="no_internet">Check Internet Connection</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>

</resources>